Compile, Train, and Evaluate the Model

--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -235,7 +235,6 @@
    "source": [
     "# Visualize the value counts of APPLICATION_TYPE\n",
     "app_counts.plot.density()\n",
-    "# app_counts = application_df['APPLICATION_TYPE'].value_counts().plot.kde()\n",
     "app_counts"
    ]
   },
@@ -267,12 +266,9 @@
    "source": [
     "# Determine which values to replace if counts are less than 200?\n",
     "replace_application = list(app_counts[app_counts < 200].index)\n",
-    "# replace_countries = list(country_counts[country_counts < 100].index)\n",
-    "\n",
     "# Replace in dataframe\n",
     "for app in replace_application:\n",
     "    application_df.APPLICATION_TYPE = application_df.APPLICATION_TYPE.replace(app,\"Other\")\n",
-    "    \n",
     "# Check to make sure binning was successful\n",
     "application_df.APPLICATION_TYPE.value_counts()"
    ]
@@ -339,8 +335,7 @@
    ],
    "source": [
     "# Visualize the value counts of CLASSIFICATION\n",
-    "class_counts.plot.density()\n",
-    "# class_counts = application_df['CLASSIFICATION'].value_counts().plot.kde()"
+    "class_counts.plot.density()"
    ]
   },
   {
@@ -641,7 +636,7 @@
    "outputs": [],
    "source": [
     "# Compile the model\n",
-    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n"
+    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
    ]
   },
   {
