--- a/AlphabetSoupCharity_Optimzation.ipynb
+++ b/AlphabetSoupCharity_Optimzation.ipynb
@@ -572,25 +572,18 @@
     }
    ],
    "source": [
-    "# Increasing the number the number of input features and hidden nodes for each layer of\n",
-    "# - deep neural model\n",
-    "\n",
+    "# Increasing the number the number of input features and hidden nodes for each layer of # - deep neural model\n",
     "number_input_features = len(X_train_scaled[0])\n",
     "hidden_nodes_layer1 = 42\n",
     "hidden_nodes_layer2 = 20\n",
-    "\n",
     "nn_new = tf.keras.models.Sequential()\n",
-    "\n",
     "# First hidden layer\n",
     "nn_new.add(\n",
     "    tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\"))\n",
-    "\n",
     "# Second hidden layer\n",
     "nn_new.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation=\"relu\"))\n",
-    "\n",
     "# Output layer\n",
     "nn_new.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
-    "\n",
     "# Check the structure of the model\n",
     "nn_new.summary()"
    ]
